Update char_count method in sitcom model, update show_spec test data and show_html page to complete user story 7

--- a/app/views/sitcoms/show.html.erb
+++ b/app/views/sitcoms/show.html.erb
@@ -3,3 +3,5 @@
   <p><%= @sitcom.streaming %><p> 
   <p><%= @sitcom.number_of_seasons %><p>
   <p><%= @sitcom.year_end %><p>
+  <p> Number of characters: <%= @sitcom.char_count %><p>
+
