Add html link for list of characters to all pages

--- a/app/views/sitcoms/index.html.erb
+++ b/app/views/sitcoms/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "List of all Characters", '/characters'%>
 <% @sitcoms.each do |sitcom| %>
   <h3><%= sitcom.name %> <%=sitcom.created_at %><h3>
 <% end %>
