--- a/app/views/sitcoms/show.html.erb
+++ b/app/views/sitcoms/show.html.erb
@@ -1,4 +1,6 @@
 
+<%= link_to "List of all Characters", '/characters'%>
+  
   <p><%= @sitcom.name %><p>
   <p><%= @sitcom.streaming %><p> 
   <p><%= @sitcom.number_of_seasons %><p>
