Add link to List of hcaracters and update html page for sitcom_characters so tests don't break

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "List of all Characters", '/characters'%>
+  
   <p><%= @character.name %><p>
   <p><%= @character.disposition%><p> 
   <p><%= @character.has_job%><p>
