--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-  <a href="http://localhost:3000/characters>">List-of-Characters</a>
+  <a href="http://localhost:3000/characters>">List of Characters</a>
+  <a href="http://localhost:3000/sitcoms>">List of Sitcoms</a>
     <%= yield %>
   </body>
 </html>
