Update test in sitcoms show_spec for US10

--- a/app/views/sitcoms/show.html.erb
+++ b/app/views/sitcoms/show.html.erb
@@ -7,3 +7,6 @@
   <p><%= @sitcom.year_end %><p>
   <p> Number of characters: <%= @sitcom.char_count %><p>
 
+<p><%= link_to "Characters Table Page", '/sitcoms/#{schitts_creek.id}/characters' %><p>
+
+
